--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +22,9 @@
     "@angular/router": "^17.0.0",
     "bootstrap": "^4.1.3",
     "bootstrap-icons": "^1.11.2",
+    "express": "^4.18.2",
     "jquery": "^3.3.1",
+    "path": "^0.12.7",
     "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.7",
-    "@angular/cli": "^17.0.7",
+    "@angular/cli": "^17.0.10",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
