--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "test": "ng test",
     "heroku-postbuild": "ng build --prod"
   },
+  "engines":{
+	  "node":"20.10.0",
+	  "npm": "10.2.3"
+  }
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
