--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "debug": "^4.3.1",
+    "express": "^4.18.2",
     "jquery": "^3.7.1",
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
